--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "start": "per-env",
     "start:development": "nodemon ./bin/www",
     "start:production": "node ./bin/www",
-    "heroku-rebuild": "heroku run npm run sequelize db:seed:undo:all && heroku run npm run sequelize db:migrate:undo:all && heroku run npm run sequelize db:migrate && heroku run npm run sequelize db:seed:all"
+    "build": "node psql-setup-script.js"
   },
   "keywords": [],
   "author": "",
