--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "wavesurfer.js": "^6.2.0"
   },
   "scripts": {
-    "heroku-postbuild": "npm run build --prefix frontend",
+    "render-postbuild": "npm run build --prefix frontend",
     "install": "npm --prefix backend install backend && npm --prefix frontend install frontend",
     "dev:backend": "npm install --prefix backend start",
     "dev:frontend": "npm install --prefix frontend start",
