--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "sequelize": "npm run --prefix backend sequelize",
     "sequelize-cli": "npm run --prefix backend sequelize-cli",
     "start": "npm start --prefix backend",
-    "build": "npm run sequelize db:seed:undo:all && npm run sequelize db:migrate:undo:all && npm run sequelize db:migrate && npm run sequelize db:seed:all"
+    "build": "npm run build --prefix backend"
   },
   "repository": {
     "type": "git",
