--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.8.6",
+    "react-icons": "^4.7.1",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
